Revert "Migrate away from Collections.singleton"
This reverts commit 5623dd3e2faf999a7a58b0e0771f44dad6e673ee.