@@ -417,7 +417,8 @@ public class ApiBag {
       ContentStream stream, Map<String, JsonSchemaValidator> validators, boolean validate) {
     List<CommandOperation> parsedCommands = null;
     try {
-      parsedCommands = CommandOperation.readCommands(Set.of(stream), new NamedList<>());
+      parsedCommands =
+          CommandOperation.readCommands(Collections.singleton(stream), new NamedList<>());
     } catch (IOException e) {
       throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unable to parse commands", e);
     }
