@@ -17,9 +17,9 @@
 
 package org.apache.solr.cloud;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Set;
 import org.apache.solr.SolrTestCase;
 import org.junit.Test;
 
@@ -29,16 +29,16 @@ public class ShardTermsTest extends SolrTestCase {
     Map<String, Long> map = new HashMap<>();
     map.put("leader", 0L);
     ShardTerms terms = new ShardTerms(map, 0);
-    terms = terms.increaseTerms("leader", Set.of("replica"));
+    terms = terms.increaseTerms("leader", Collections.singleton("replica"));
     assertEquals(1L, terms.getTerm("leader").longValue());
 
     map.put("leader", 2L);
     map.put("live-replica", 2L);
     map.put("dead-replica", 1L);
     terms = new ShardTerms(map, 0);
-    assertNull(terms.increaseTerms("leader", Set.of("dead-replica")));
+    assertNull(terms.increaseTerms("leader", Collections.singleton("dead-replica")));
 
-    terms = terms.increaseTerms("leader", Set.of("leader"));
+    terms = terms.increaseTerms("leader", Collections.singleton("leader"));
     assertEquals(3L, terms.getTerm("live-replica").longValue());
     assertEquals(2L, terms.getTerm("leader").longValue());
     assertEquals(1L, terms.getTerm("dead-replica").longValue());
