@@ -32,7 +32,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
-import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
@@ -616,7 +615,7 @@ public class AddBlockUpdateTest extends SolrTestCaseJ4 {
                         "child_s",
                         "b",
                         "grandChild",
-                        Set.of(sdoc("id", "7", "child_s", "d"))),
+                        Collections.singleton(sdoc("id", "7", "child_s", "d"))),
                     sdoc("id", "6", "child_s", "c")))
             .toString());
   }
