@@ -17,6 +17,7 @@
 package org.apache.solr.ltr.feature;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
@@ -81,7 +82,7 @@ public class FieldValueFeature extends Feature {
 
   public void setField(String field) {
     this.field = field;
-    fieldAsSet = Set.of(field);
+    fieldAsSet = Collections.singleton(field);
   }
 
   @Override
