@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
-import java.util.Set;
 
 /**
  * @since solr 1.3
@@ -162,7 +161,7 @@ public class SolrInputField implements Iterable<Object>, Serializable {
     } else if (value instanceof Collection) {
       return ((Collection<Object>) value).iterator();
     }
-    return Set.of(value).iterator();
+    return Collections.singleton(value).iterator();
   }
 
   @Override
